--- a/templates/app/results.html
+++ b/templates/app/results.html
@@ -44,6 +44,8 @@
                 </tbody>
             </table>
         </div>
+
+        {% include 'app/_footer.html' %}
     </div>
 </div>
 {% endblock %}
