--- a/templates/app/_footer.html
+++ b/templates/app/_footer.html
@@ -4,11 +4,7 @@
     <div class="footer-copyright text-center">
         © 2019. Inteligencia Artificial - Universidad de Sevilla.
         <br>
-        <a href="aviso-legal" target="_blank">Aviso legal</a>
-        &bullet;
-        <a href="accesibilidad" target="_blank">Instrucciones</a>
-        &bullet;
-        <a href="creditos" target="_blank">Cŕeditos</a>
+        Realizado por Carlos Campos & Alejandro Rodríguez
     </div>
     <!-- Copyright -->
 </footer>
