Fix in templates

--- a/templates/app/home.html
+++ b/templates/app/home.html
@@ -200,7 +200,7 @@
                             <a href="#secciones">Secciones de la aplicación</a>
                             <a href="#crear-mapa">Crear mapa</a>
                             <a href="#crear-problema">Crear problema</a>
-                            <a href="#visualizar-resultado">visualizar resultado</a>
+                            <a href="#visualizar-resultado">Visualizar resultado</a>
                             <a href="#pagina-resultados">Página de resultados</a>
                         </div>
                     </div>
