--- a/templates/app/create_problem.html
+++ b/templates/app/create_problem.html
@@ -39,14 +39,14 @@
                         <div class="block">
                             <label>
                                 Gamma
-                                <span class="help">Indica la importancia que se le da a los pasos futuros. A más valor menos importancia.</span>
+                                <span class="help">Indica la importancia que se le da a los pasos futuros. A más valor menos importancia. Tiene que ser un valor entre 0 y1.</span>
                             </label>
                             {{ form.gamma }}
                         </div>
                         <div class="block">
                             <label>
                                 Alpha
-                                <span class="help">Indica el nivel de aleatoriedad del algoritmo. A más valor más aleatorio.</span>
+                                <span class="help">Indica la tasa de aprendizaje del algoritmo. A más valor menos importancia. Tiene que ser un valor entre 0 y1.</span>
                             </label>
                             {{ form.alpha }}
                         </div>
